QnA 추가된 프로젝트
백업용! 최신버전으로 변경해야함ㅃ!

--- a/amigo/src/main/webapp/WEB-INF/web.xml
+++ b/amigo/src/main/webapp/WEB-INF/web.xml
@@ -44,4 +44,11 @@
 		<filter-name>encoding</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<!-- welcome -->
+	<welcome-file-list>
+		<welcome-file>
+			welcome.jsp
+		</welcome-file>
+	</welcome-file-list>
 </web-app>
