--- a/amigo/src/main/webapp/WEB-INF/web.xml
+++ b/amigo/src/main/webapp/WEB-INF/web.xml
@@ -3,11 +3,12 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-	<!-- The definition of the Root Spring Container shared by all Servlets 
-		and Filters -->
+	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value>
+		/WEB-INF/spring/root-context.xml
+		</param-value>
 	</context-param>
 
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
@@ -31,7 +32,7 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
-<!-- 한글 처리를 위한 인코딩 필터 -->
+	<!-- 한글 처리를 위한 인코딩 필터 -->
 	<filter>
 		<filter-name>encoding</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -44,11 +45,5 @@
 		<filter-name>encoding</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
-	<!-- welcome -->
-	<welcome-file-list>
-		<welcome-file>
-			welcome.jsp
-		</welcome-file>
-	</welcome-file-list>
+
 </web-app>
