--- a/amigo/src/main/webapp/WEB-INF/web.xml
+++ b/amigo/src/main/webapp/WEB-INF/web.xml
@@ -46,4 +46,11 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<!-- welcome -->
+	<welcome-file-list>
+		<welcome-file>
+			hello.jsp
+		</welcome-file>
+	</welcome-file-list>
+
 </web-app>
